--- a/RELEASES.adoc
+++ b/RELEASES.adoc
@@ -1,39 +1,43 @@
+{@import samplemacros.jim}
+== pass:[{SB}] Release history
+{@define RELEASE($X)=link:https://github.com/sourcebuddy/sourcebuddy/tree/$X[$X]}
 
-== pass:[SourceBuddy] Release history
+=== {RELEASE 2.4.1}
 
+Support for JVM 21 formatted files.
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.4.0[2.4.0]
+=== {RELEASE 2.4.0}
 
 This release can be used to load byte code compiled outside the scope of the compiler object.
 This means new method `byteCode()` added to the `Compiler` object.
 Along with this, there is a new method `canCompile()` to check if the compiler is available on the platform.
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.3.2[2.3.2]
+=== {RELEASE 2.3.2}
 
 Minor bug fix.
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.3.1[2.3.1]
+=== {RELEASE 2.3.1}
 
 Bug fixed.
 In previous releases, you could not get the stream of loaded classes when there was a `module-info.java` file.
 The creation of the `Loaded` object avoided loading the binary for the `module-info` but the stream creation did not.
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.3.0[2.3.0]
+=== {RELEASE 2.3.0}
 
 Adding support for Java 20.
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.2.0[2.2.0]
+=== {RELEASE 2.2.0}
 
 You can add modules to the compilation unit using the `modules()` method.
 Class and module path are added automatically to the compiler options unless you call `isolate()`.
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.1.0[2.1.0]
+=== {RELEASE 2.1.0}
 
 The individual classes can be each hidden or named (not hidden).
 Named classes can also be loaded using a lookup object.
 Class can be denoted as nesting class mimicking already existing class.
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.0.0[2.0.0]
+=== {RELEASE 2.0.0}
 
 Major restructuring of the class loading structure.
 With this release, hidden and non-hidden classes can be mixed.
@@ -42,16 +46,17 @@ Instead, you can call `hidden()` for each added source separately.
 
 Since this change, removing a method from the API is not backward compatible, this is a new major version.
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/1.1.1[1.1.1]
+=== {RELEASE 1.1.1}
 
 Fix to cache some resources.
 Prior versions had a bug not storing created methods handles in the cache.
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/1.1.0[1.1.0]
+=== {RELEASE 1.1.0}
 
 Fix to work with hidden classes properly and also adds extra APU.
 
-=== link:https://github.com/sourcebuddy/sourcebuddy/tree/1.0.0[1.0.0]
+=== {RELEASE 1.0.0}
 
 Initial release.
 Support hidden classes, but it does not work due to a bug.
+
