--- a/RELEASES.adoc
+++ b/RELEASES.adoc
@@ -5,6 +5,11 @@
 
 
 
+=== link:https://github.com/sourcebuddy/sourcebuddy/tree/2.5.3[2.5.3]
+
+Bug fix when specifying files on Windows, the file separator was not handled correctly.
+This release allows you to use `/` and `\` interchangeably in the file names on any operating system.
+
 === link:https://github.com/sourcebuddy/sourcebuddy/tree/2.5.2[2.5.2]
 
 The library now supports the Java module system.
